# fishfish-py

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
examples/: low_level.py  stream.py
fishfish/: __init__.py  client.py  enums.py  exceptions.py  fish_http_client.py  http.py  jwt.py
fishfish/models/: __init__.py  domain.py  token.py  url.py
fishfish/ws/: __init__.py  events.py  fish_websocket.py
fishfish/ws/models/: __init__.py  domain_create.py  domain_delete.py  domain_update.py  domains.py  url_create.py  url_delete.py  url_update.py  urls.py
