[tool.poetry]
name = "fishfish"
version = "0.1.0"
description = "FishFish API library for Python"
authors = ["fishfish-gg <admin@fishfish.gg>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.extras]
docs = ["Sphinx", "sphinxcontrib-trio", "myst-parser"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
